# tuyaopen-ai

./: README_zh.md
boards/sg200x/: toolchain_sg200x_rv64_musl.cmake
components/audio_codecs/: CMakeLists.txt
components/http_client/coreHTTP/source/: core_http_client.c
components/tal_driver/: CMakeLists.txt
components/tal_system/: CMakeLists.txt
components/tuya_ai_basic/: CMakeLists.txt
components/tuya_ai_basic/src/: tuya_ai_protocol.c
components/tuya_cloud_service/cloud/: atop_base.c  atop_service.c  iotdns.c  matop_service.c  mqtt_service.c  tuya_iot.c
components/tuya_cloud_service/lan/: tuya_lan.c
components/utilities/src/: tuya_ringbuf.c
demos/ai_demo/: CMakeLists.txt  Makefile.test  README_ALSA_CONFIG.md  README_RECORD.md  ai_agent.c  ai_agent.h  ai_audio.c  ai_audio.h  build_record.sh  main.c  test_record.c
demos/ai_demo/audio/: alsa.c  alsa.h  tuya_t5_ai_board.c  wav_writer.c  wav_writer.h
demos/ai_demo/media/: ai_media_alert.h
demos/switch_demo/: CMakeLists.txt  main.c
port/: CMakeLists.txt
port/include/common/: tuya_kconfig.h
port/include/media/: tkl_video_enc.h  tkl_video_in.h
port/linux/: tkl_audio.c  tkl_memory.c
